[gd_scene load_steps=3 format=3 uid="uid://dqjrh2sbt25nj"]

[ext_resource type="Script" path="res://scripts/ui/player_controls.gd" id="1_aupuh"]
[ext_resource type="FontFile" uid="uid://bo7h0qqqm5o8n" path="res://assets/fonts/PublicPixel.ttf" id="1_gtucq"]

[node name="Player_UI" type="CanvasLayer"]
script = ExtResource("1_aupuh")

[node name="playerButtons" type="VBoxContainer" parent="."]
offset_left = 262.0
offset_top = 106.0
offset_right = 370.0
offset_bottom = 246.0
scale = Vector2(0.5, 0.5)

[node name="callButton" type="Button" parent="playerButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_gtucq")
theme_override_font_sizes/font_size = 16
text = "CALL"
alignment = 2

[node name="raiseButton" type="Button" parent="playerButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_gtucq")
theme_override_font_sizes/font_size = 16
text = "RAISE"
alignment = 2

[node name="foldButton" type="Button" parent="playerButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_gtucq")
theme_override_font_sizes/font_size = 16
text = "FOLD"
alignment = 2

[connection signal="pressed" from="playerButtons/callButton" to="." method="_on_call_button_pressed"]
[connection signal="pressed" from="playerButtons/raiseButton" to="." method="_on_raise_button_pressed"]
[connection signal="pressed" from="playerButtons/foldButton" to="." method="_on_fold_button_pressed"]
